--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pwdkit",
   "description": "A lightweight utility to evaluate password strength and generate password suggestions.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -12,6 +12,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup src/index.ts --dts --format esm,cjs",
     "prepare": "npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codeXForger/pwdkit"
   },
   "author": "nodexforger",
   "license": "MIT",
