fix(package.json): added keywords

--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
   "name": "pwdkit",
   "description": "A lightweight utility to evaluate password strength and generate password suggestions.",
-  "version": "1.0.4",
+  "keywords": [
+    "password",
+    "password-strength",
+    "password-generator",
+    "security",
+    "auth",
+    "typescript",
+    "nodejs",
+    "password-checker",
+    "password-utils",
+    "password-policy",
+    "password-toolkit",
+    "password-meter",
+    "password-score",
+    "pwd",
+    "pwd-generator",
+    "pwd-score"
+  ],
+  "version": "1.0.5",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
